cmake_minimum_required(VERSION 2.6)
 
set(core_src
src/TinyXML/tinyxml.cpp
src/TinyXML/tinyxml.h
src/TinyXML/tinyxmlerror.cpp
src/TinyXML/tinyxmlparser.cpp
src/allocator.cpp
src/allocator.h
src/allocatorchunk.cpp
src/allocatorchunk.h
src/array.h
src/arraystack.h
src/bmp-format.h
src/bufferedfilestream.cpp
src/bufferedfilestream.h
src/checksum.cpp
src/checksum.h
src/clock.cpp
src/clock.h
src/color.h
src/configmanager.cpp
src/configmanager.h
src/configparser.cpp
src/configparser.h
src/configvar.cpp
src/configvar.h
src/core.h
src/customassert.cpp
src/customassert.h
src/customnew.cpp
src/customnew.h
src/datapipe.cpp
src/datapipe.h
src/display.cpp
src/display.h
src/dynamicmemorystream.cpp
src/dynamicmemorystream.h
src/exceptionhandler.h
src/exceptiontrace.cpp
src/exceptiontrace.h
src/exceptionuploadlog.h
src/file.cpp
src/file.h
src/filestream.cpp
src/filestream.h
src/hashedstring.cpp
src/hashedstring.h
src/hashtable.h
src/icontroller.h
src/idatastream.h
src/iinputsystemobserver.h
src/inputcontext.cpp
src/inputcontext.h
src/inputsystem.cpp
src/inputsystem.h
src/interpolator.h
src/keyboard.cpp
src/keyboard.h
src/list.h
src/map.h
src/mathcore.h
src/memorystream.cpp
src/memorystream.h
src/mouse.cpp
src/mouse.h
src/multimap.h
src/packstream.cpp
src/packstream.h
src/printmanager.cpp
src/printmanager.h
src/profiler.cpp
src/profiler.h
src/profilerhook.cpp
src/profilerhook.h
src/profilertable.cpp
src/profilertable.h
src/reversehash.cpp
src/reversehash.h
src/set.h
src/simplestring.cpp
src/simplestring.h
src/stack.h
src/stopwatch.cpp
src/stopwatch.h
src/stringmanager.cpp
src/stringmanager.h
src/test.cpp
src/test.h
src/timer.cpp
src/timer.h
src/versions.h
src/windowwrapper.cpp
src/windowwrapper.h
src/xinputcontroller.cpp
src/xinputcontroller.h
)
 
add_library(Core ${core_src})

target_link_libraries(Core z)