cmake_minimum_required(VERSION 2.6)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

include_directories(../../Libraries/Audio/src)
include_directories(../../Libraries/Math/src)
include_directories(../../Libraries/Framework/src)
include_directories(../../Libraries/UI/src)
include_directories(../../Libraries/2D/src)
include_directories(../../Libraries/3D/src)
include_directories(../../Libraries/Core/src)
include_directories(../../Libraries/Rodin/src)
include_directories(../../Libraries/Workbench/src)
include_directories(${FMOD_INCLUDE_DIR})
include_directories(src)

link_directories(${CMAKE_SOURCE_DIR}/Libraries/Audio/)
link_directories(${CMAKE_SOURCE_DIR}/Libraries/Audio/lib)
link_directories(${CMAKE_SOURCE_DIR}/Libraries/Math/)
link_directories(${CMAKE_SOURCE_DIR}/Libraries/Framework/)
link_directories(${CMAKE_SOURCE_DIR}/Libraries/UI/)
link_directories(${CMAKE_SOURCE_DIR}/Libraries/2D/)
link_directories(${CMAKE_SOURCE_DIR}/Libraries/3D/)
link_directories(${CMAKE_SOURCE_DIR}/Libraries/Core/)
link_directories(${CMAKE_SOURCE_DIR}/Libraries/Rodin/)
link_directories(${CMAKE_SOURCE_DIR}/Libraries/Workbench/)
link_directories(/usr/local/lib)

set(eldritch_src
src/Actions/wbactioneldaddblock.cpp
src/Actions/wbactioneldaddblock.h
src/Actions/wbactioneldbanktransaction.cpp
src/Actions/wbactioneldbanktransaction.h
src/Actions/wbactioneldbindinput.cpp
src/Actions/wbactioneldbindinput.h
src/Actions/wbactioneldcheckcone.cpp
src/Actions/wbactioneldcheckcone.h
src/Actions/wbactioneldcheckline.cpp
src/Actions/wbactioneldcheckline.h
src/Actions/wbactioneldchecksphere.cpp
src/Actions/wbactioneldchecksphere.h
src/Actions/wbactionelddamageworld.cpp
src/Actions/wbactionelddamageworld.h
src/Actions/wbactioneldgiveitem.cpp
src/Actions/wbactioneldgiveitem.h
src/Actions/wbactioneldgotolevel.cpp
src/Actions/wbactioneldgotolevel.h
src/Actions/wbactioneldlaunchwebsite.cpp
src/Actions/wbactioneldlaunchwebsite.h
src/Actions/wbactioneldplayanim.cpp
src/Actions/wbactioneldplayanim.h
src/Actions/wbactioneldplayhandanim.cpp
src/Actions/wbactioneldplayhandanim.h
src/Actions/wbactioneldremoveblock.cpp
src/Actions/wbactioneldremoveblock.h
src/Actions/wbactioneldsetlight.cpp
src/Actions/wbactioneldsetlight.h
src/Actions/wbactioneldsetpersistentvar.cpp
src/Actions/wbactioneldsetpersistentvar.h
src/Actions/wbactioneldshowbook.cpp
src/Actions/wbactioneldshowbook.h
src/Actions/wbactioneldspawnentity.cpp
src/Actions/wbactioneldspawnentity.h
src/Actions/wbactioneldstopmotion.cpp
src/Actions/wbactioneldstopmotion.h
src/Actions/wbactioneldtweetrip.cpp
src/Actions/wbactioneldtweetrip.h
src/AnimEvents/animeventeldexecuteaction.cpp
src/AnimEvents/animeventeldexecuteaction.h
src/AnimEvents/animeventeldsendevent.cpp
src/AnimEvents/animeventeldsendevent.h
src/BTNodes/rodinbtnodeeldlookat.cpp
src/BTNodes/rodinbtnodeeldlookat.h
src/BTNodes/rodinbtnodeeldmoveto.cpp
src/BTNodes/rodinbtnodeeldmoveto.h
src/BTNodes/rodinbtnodeeldplayanim.cpp
src/BTNodes/rodinbtnodeeldplayanim.h
src/BTNodes/rodinbtnodeeldplaybark.cpp
src/BTNodes/rodinbtnodeeldplaybark.h
src/BTNodes/rodinbtnodeeldstopmoving.cpp
src/BTNodes/rodinbtnodeeldstopmoving.h
src/BTNodes/rodinbtnodeeldturntoward.cpp
src/BTNodes/rodinbtnodeeldturntoward.h
src/Components/wbcompeldaimotion.cpp
src/Components/wbcompeldaimotion.h
src/Components/wbcompeldammobag.cpp
src/Components/wbcompeldammobag.h
src/Components/wbcompeldanchor.cpp
src/Components/wbcompeldanchor.h
src/Components/wbcompeldcamera.cpp
src/Components/wbcompeldcamera.h
src/Components/wbcompeldcharacter.cpp
src/Components/wbcompeldcharacter.h
src/Components/wbcompeldclimbable.cpp
src/Components/wbcompeldclimbable.h
src/Components/wbcompeldcollision.cpp
src/Components/wbcompeldcollision.h
src/Components/wbcompelddamager.cpp
src/Components/wbcompelddamager.h
src/Components/wbcompelddoor.cpp
src/Components/wbcompelddoor.h
src/Components/wbcompelddropshadow.cpp
src/Components/wbcompelddropshadow.h
src/Components/wbcompeldendgamecounter.cpp
src/Components/wbcompeldendgamecounter.h
src/Components/wbcompeldfaction.cpp
src/Components/wbcompeldfaction.h
src/Components/wbcompeldfootsteps.cpp
src/Components/wbcompeldfootsteps.h
src/Components/wbcompeldfrobbable.cpp
src/Components/wbcompeldfrobbable.h
src/Components/wbcompeldfrobber.cpp
src/Components/wbcompeldfrobber.h
src/Components/wbcompeldhands.cpp
src/Components/wbcompeldhands.h
src/Components/wbcompeldhard.cpp
src/Components/wbcompeldhard.h
src/Components/wbcompeldhardlistener.cpp
src/Components/wbcompeldhardlistener.h
src/Components/wbcompeldheadtracker.cpp
src/Components/wbcompeldheadtracker.h
src/Components/wbcompeldhealth.cpp
src/Components/wbcompeldhealth.h
src/Components/wbcompeldhudmarker.cpp
src/Components/wbcompeldhudmarker.h
src/Components/wbcompeldicicles.cpp
src/Components/wbcompeldicicles.h
src/Components/wbcompeldinventory.cpp
src/Components/wbcompeldinventory.h
src/Components/wbcompelditem.cpp
src/Components/wbcompelditem.h
src/Components/wbcompeldkeyring.cpp
src/Components/wbcompeldkeyring.h
src/Components/wbcompeldlight.cpp
src/Components/wbcompeldlight.h
src/Components/wbcompeldlock.cpp
src/Components/wbcompeldlock.h
src/Components/wbcompeldmapmarker.cpp
src/Components/wbcompeldmapmarker.h
src/Components/wbcompeldmarkup.cpp
src/Components/wbcompeldmarkup.h
src/Components/wbcompeldmesh.cpp
src/Components/wbcompeldmesh.h
src/Components/wbcompeldminimap.cpp
src/Components/wbcompeldminimap.h
src/Components/wbcompeldparticles.cpp
src/Components/wbcompeldparticles.h
src/Components/wbcompeldpickup.cpp
src/Components/wbcompeldpickup.h
src/Components/wbcompeldplayer.cpp
src/Components/wbcompeldplayer.h
src/Components/wbcompeldpowerteleport.cpp
src/Components/wbcompeldpowerteleport.h
src/Components/wbcompeldrespawner.cpp
src/Components/wbcompeldrespawner.h
src/Components/wbcompeldrope.cpp
src/Components/wbcompeldrope.h
src/Components/wbcompeldsensor.cpp
src/Components/wbcompeldsensor.h
src/Components/wbcompeldsensordamage.cpp
src/Components/wbcompeldsensordamage.h
src/Components/wbcompeldsensorhearing.cpp
src/Components/wbcompeldsensorhearing.h
src/Components/wbcompeldsensormarkup.cpp
src/Components/wbcompeldsensormarkup.h
src/Components/wbcompeldsensorpoll.cpp
src/Components/wbcompeldsensorpoll.h
src/Components/wbcompeldsensortheft.cpp
src/Components/wbcompeldsensortheft.h
src/Components/wbcompeldsensorvision.cpp
src/Components/wbcompeldsensorvision.h
src/Components/wbcompeldsleeper.cpp
src/Components/wbcompeldsleeper.h
src/Components/wbcompeldsound.cpp
src/Components/wbcompeldsound.h
src/Components/wbcompeldspikes.cpp
src/Components/wbcompeldspikes.h
src/Components/wbcompeldthinker.cpp
src/Components/wbcompeldthinker.h
src/Components/wbcompeldthinkerhearwormtarget.cpp
src/Components/wbcompeldthinkerhearwormtarget.h
src/Components/wbcompeldthinkerpatrol.cpp
src/Components/wbcompeldthinkerpatrol.h
src/Components/wbcompeldthinkertarget.cpp
src/Components/wbcompeldthinkertarget.h
src/Components/wbcompeldtransform.cpp
src/Components/wbcompeldtransform.h
src/Components/wbcompeldtrapbolt.cpp
src/Components/wbcompeldtrapbolt.h
src/Components/wbcompeldusable.cpp
src/Components/wbcompeldusable.h
src/Components/wbcompeldvisible.cpp
src/Components/wbcompeldvisible.h
src/Components/wbcompeldwallet.cpp
src/Components/wbcompeldwallet.h
src/Components/wbcompeldwatson.cpp
src/Components/wbcompeldwatson.h
src/Components/wbcompeldweapon.cpp
src/Components/wbcompeldweapon.h
src/Components/wbeldritchcomponent.cpp
src/Components/wbeldritchcomponent.h
src/PEs/wbpeelddistance.cpp
src/PEs/wbpeelddistance.h
src/PEs/wbpeeldgetcharactervo.cpp
src/PEs/wbpeeldgetcharactervo.h
src/PEs/wbpeeldgetfaction.cpp
src/PEs/wbpeeldgetfaction.h
src/PEs/wbpeeldgetitem.cpp
src/PEs/wbpeeldgetitem.h
src/PEs/wbpeeldgetlocation.cpp
src/PEs/wbpeeldgetlocation.h
src/PEs/wbpeeldgetpersistentvar.cpp
src/PEs/wbpeeldgetpersistentvar.h
src/PEs/wbpeeldgetslot.cpp
src/PEs/wbpeeldgetslot.h
src/PEs/wbpeeldgetvelocity.cpp
src/PEs/wbpeeldgetvelocity.h
src/PEs/wbpeeldhardscalar.cpp
src/PEs/wbpeeldhardscalar.h
src/PEs/wbpeeldhardswitch.cpp
src/PEs/wbpeeldhardswitch.h
src/PEs/wbpeeldplayer.cpp
src/PEs/wbpeeldplayer.h
src/SDPs/sdpelddropshadow.cpp
src/SDPs/sdpelddropshadow.h
src/SDPs/sdpeldhud.cpp
src/SDPs/sdpeldhud.h
src/SDPs/sdpeldhudcalibration.cpp
src/SDPs/sdpeldhudcalibration.h
src/SDPs/sdpeldlit.cpp
src/SDPs/sdpeldlit.h
src/SDPs/sdpeldpost.cpp
src/SDPs/sdpeldpost.h
src/SDPs/sdpeldworld.cpp
src/SDPs/sdpeldworld.h
src/Screens/uiscreen-eldbindinputs.cpp
src/Screens/uiscreen-eldbindinputs.h
src/Screens/uiscreen-eldcredits.cpp
src/Screens/uiscreen-eldcredits.h
src/Screens/uiscreen-eldmirror.cpp
src/Screens/uiscreen-eldmirror.h
src/Screens/uiscreen-eldsetres.cpp
src/Screens/uiscreen-eldsetres.h
src/eldritchanimevents.h
src/eldritchbank.cpp
src/eldritchbank.h
src/eldritchfactions.cpp
src/eldritchfactions.h
src/eldritchframework.cpp
src/eldritchframework.h
src/eldritchgame.cpp
src/eldritchgame.h
src/eldritchirradiance.cpp
src/eldritchirradiance.h
src/eldritchmesh.cpp
src/eldritchmesh.h
src/eldritchmusic.cpp
src/eldritchmusic.h
src/eldritchnav.cpp
src/eldritchnav.h
src/eldritchparticles.cpp
src/eldritchparticles.h
src/eldritchpersistence.cpp
src/eldritchpersistence.h
src/eldritchrodinbtnodes.h
src/eldritchroom.cpp
src/eldritchroom.h
src/eldritchsaveload.cpp
src/eldritchsaveload.h
src/eldritchsdps.h
src/eldritchsound3dlistener.cpp
src/eldritchsound3dlistener.h
src/eldritchtargetmanager.cpp
src/eldritchtargetmanager.h
src/eldritchtools.cpp
src/eldritchtools.h
src/eldritchuiscreens.h
src/eldritchwbactions.h
src/eldritchwbcomponents.h
src/eldritchwbpes.h
src/eldritchwbscenehelpers.cpp
src/eldritchwbscenehelpers.h
src/eldritchworld.cpp
src/eldritchworld.h
src/eldritchworldgen.cpp
src/eldritchworldgen.h
src/main.cpp
src/uiinputmapeldritch.cpp
src/uiinputmapeldritch.h
)
 
add_executable(Eldritch ${eldritch_src})

target_link_libraries(Eldritch Core Math 2D 3D Audio Workbench Rodin UI Framework SDL2 GL GLEW fmodex openal)